# bhsenti

./: .gitattributes  MANIFEST.in  README.md  pyproject.toml
src/bhsenti/: __init__.py
src/bhsenti/onnx/: model.onnx
